Fixes dark mode style overflow in catalog search input

--- a/src/components/catalog.scss
+++ b/src/components/catalog.scss
@@ -131,7 +131,6 @@
 					right: 0;
 					padding: 4px 35px 4px 35px;
 					font-size: 14px;
-					color: #fff;
 					background: #fff;
 					border: solid 1px #b0b0b0;
 					border-radius: 12px;
